--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,6 @@
 /obj
 /Bin
 /Zirpl.Examples.CodeGeneration.VS2013.Commerce.Tests.Testing/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Tests.Common.csproj.DotSettings
+/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Tests.Service/obj
+/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Tests.Service/bin
+/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Tests.Service/Zirpl.Examples.CodeGeneration.VS2013.Commerce.Tests.Service.csproj.DotSettings
