--- a/Zirpl.AppEngine.Testing.Net45/Zirpl.AppEngine.Testing.Net45.csproj
+++ b/Zirpl.AppEngine.Testing.Net45/Zirpl.AppEngine.Testing.Net45.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{15590AA5-04CE-4ADD-AEB3-8ED12BF3C1CA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Zirpl.Testing</RootNamespace>
-    <AssemblyName>Zirpl.Common.Testing</AssemblyName>
+    <RootNamespace>Zirpl.AppEngine.Testing</RootNamespace>
+    <AssemblyName>Zirpl.AppEngine.Testing</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -159,7 +159,7 @@
   </Target>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties ProjectLinkReference="366c5119-60f8-4c0b-9d03-fd423bd5b6c5" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
+      <UserProperties ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" ProjectLinkReference="366c5119-60f8-4c0b-9d03-fd423bd5b6c5" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
