--- a/Zirpl.Testing.Net45/Zirpl.Testing.Net45.csproj
+++ b/Zirpl.Testing.Net45/Zirpl.Testing.Net45.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B1007897-ED7D-4647-BA6E-C35E12CE7D03}</ProjectGuid>
+    <ProjectGuid>{716DCDAD-3F27-4C3C-8F2B-4BE6E6C670E8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Zirpl.Testing</RootNamespace>
-    <AssemblyName>Zirpl.Common.Testing</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <AssemblyName>Zirpl.Testing</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
@@ -33,73 +32,33 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net40\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.1\lib\net40\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="FluentAssertions">
-      <HintPath>..\packages\FluentAssertions.3.0.107\lib\net40\FluentAssertions.dll</HintPath>
+      <HintPath>..\packages\FluentAssertions.3.0.107\lib\net45\FluentAssertions.dll</HintPath>
     </Reference>
     <Reference Include="FluentAssertions.Core">
-      <HintPath>..\packages\FluentAssertions.3.0.107\lib\net40\FluentAssertions.Core.dll</HintPath>
+      <HintPath>..\packages\FluentAssertions.3.0.107\lib\net45\FluentAssertions.Core.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Telerik.JustMock">
-      <HintPath>..\packages\JustMock.2014.2.609.3\lib\Net35\Telerik.JustMock.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Zirpl.AppEngine.Testing\AssertionUtilities.cs">
+    <Compile Include="..\Zirpl.Testing\AssertionUtilities.cs">
       <Link>AssertionUtilities.cs</Link>
     </Compile>
-    <Compile Include="..\Zirpl.AppEngine.Testing\Entities.cs">
-      <Link>Entities.cs</Link>
+    <Compile Include="..\Zirpl.Testing\UnitTestUtilities.cs">
+      <Link>UnitTestUtilities.cs</Link>
     </Compile>
-    <Compile Include="..\Zirpl.AppEngine.Testing\EntityLayerTestFixtureBase.cs">
-      <Link>EntityLayerTestFixtureBase.cs</Link>
-    </Compile>
-    <Compile Include="..\Zirpl.AppEngine.Testing\EntityWrapper.cs">
-      <Link>EntityWrapper.cs</Link>
-    </Compile>
-    <Compile Include="..\Zirpl.AppEngine.Testing\IEntityLayerTestsStrategy.cs">
-      <Link>IEntityLayerTestsStrategy.cs</Link>
-    </Compile>
-    <Compile Include="..\Zirpl.AppEngine.Testing\InitializeMappingBootstrapperAttribute.cs">
-      <Link>InitializeMappingBootstrapperAttribute.cs</Link>
-    </Compile>
-    <Compile Include="..\Zirpl.AppEngine.Testing\MockHttpContextAttribute.cs">
-      <Link>MockHttpContextAttribute.cs</Link>
-    </Compile>
-    <Compile Include="..\Zirpl.AppEngine.Testing\Properties\AssemblyInfo.cs">
-      <Link>Properties\AssemblyInfo.cs</Link>
-    </Compile>
-    <Compile Include="..\Zirpl.AppEngine.Testing\Properties\AssemblyInfo_common.cs">
-      <Link>Properties\AssemblyInfo_common.cs</Link>
-    </Compile>
-    <Compile Include="..\Zirpl.AppEngine.Testing\SetAspNetMvcDependencyResolver.cs">
-      <Link>SetAspNetMvcDependencyResolver.cs</Link>
-    </Compile>
-    <Compile Include="..\Zirpl.AppEngine.Testing\UpdatableProperty.cs">
-      <Link>UpdatableProperty.cs</Link>
-    </Compile>
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <None Include="..\Zirpl.AppEngine.Testing\App.config">
-      <Link>App.config</Link>
-    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -112,7 +71,7 @@
   </Target>
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties ProjectLinkReference="366c5119-60f8-4c0b-9d03-fd423bd5b6c5" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
+      <UserProperties ProjectLinkReference="f4fbe07d-ed80-4a72-9f19-90d15979fa0a" ProjectLinkerExcludeFilter="\\?desktop(\\.*)?$;\\?silverlight(\\.*)?$;\.desktop;\.silverlight;\.xaml;^service references(\\.*)?$;\.clientconfig;^web references(\\.*)?$" />
     </VisualStudio>
   </ProjectExtensions>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
